--- a/local-device-agent/.env.example
+++ b/local-device-agent/.env.example
@@ -1,5 +1,5 @@
 # URL of your Azure VM service (no trailing slash)
-SERVER_BASE_URL=http://print.cp.arkav.com:3000
+SERVER_BASE_URL=https://print.cp.arkavidia.com
 AGENT_TOKEN=change-me-strong-token
 AGENT_ID=fariz-pc
 PRINTER_NAME=hp_m255nw
